sway/waybar/style.css
* {
    border: none;
    font-family: sans-serif;
    font-size: {{bar_font_size}};
    padding: 0;
    min-height: 0;
    border-radius: 0;
}

/* Disable default hover effect */
widget > button:hover, #workspaces button:hover {
    box-shadow: inherit;
    background: inherit;
    text-shadow: inherit;
}

window#waybar {
    background: transparent;
}

/* Vertical padding in the entire bar */
window > .horizontal {
    padding: 3px 0;
}

/* Horizontal padding in every module */
widget > button {
    padding: 0 10px;
    color: #eeeeee;
}

/* LEFT MODULES */
#workspaces, #mode {
    border-radius: 5px;
    background-color: #{{colors.bg_light}};
    margin-right: 10px;
}
/* First workspace has rounded borders on the left side */
#workspaces button:first-child {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}
/* Last workspace has rounded borders on the right side */
#workspaces button:last-child {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}
#workspaces button {
    padding: 2px;
    border-radius: 0;
}
#workspaces button.focused {
    background-color: #{{colors.accent}};
    color: #{{colors.black}};
    margin-bottom: 1px;
}

/* CENTER MODULES */
#custom-mpris {
    border-radius: 5px;
    background-color: #{{colors.green}};
    color: #{{colors.black}};
}

/* RIGHT MODULES */
/* These modules have rounded corners on the left */
#idle_inhibitor, #network, #temperature, #custom-keyboard_layout, #tray {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

/* These modules have rounded corners on the right */
#pulseaudio, #memory, #battery, #clock, #tray {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    margin-right: 10px;
}

/* Modules grouped in one pill */
#idle_inhibitor, #pulseaudio {
    background-color: #{{colors.bg_light}};
}
#idle_inhibitor.activated {
    background-color: #{{colors.accent}};
    color: #{{colors.black}};
}
#pulseaudio.muted {
    color: #{{colors.red}};
}

/* Modules grouped in one pill */
#network, #cpu, #memory {
    background-color: #{{colors.bg_light}};
}
#network.disconnected {
    color: #{{colors.red}};
}

/* Modules grouped in one pill */
#temperature, #battery {
    background-color: #{{colors.bg_light}};
}

/* Modules grouped in one pill */
#custom-keyboard_layout, #clock {
    background-color: #{{colors.bg_light}};
}

/* Module in one pill */
#tray {
    background-color: #{{colors.bg_light}};
    padding: 0 10px;
}

